--- a/index/Neural__1/neural__1.css
+++ b/index/Neural__1/neural__1.css
@@ -3,7 +3,7 @@
 }
 
   body {
-    background: #3c228a;
-    color: #52d5ec;
+    background: #432a75;
+    color: #5fde5d;
     font-family: 'Roboto', sans-serif;
   }
