--- a/index/Neural__4/index.css
+++ b/index/Neural__4/index.css
@@ -6,14 +6,14 @@
 }
 
 body {
-  color: #f5774d;
-  background: #0e2198;
+  color: #76f06f;
+  background: #5c0ab9;
   padding-left: 25%;
   padding-right: 25%;
 }
 
 hr {
-  background: #f5774d;
+  background: #76f06f;
   margin-bottom: 16px;
   margin-top: 16px;
 }
