--- a/index/Neural__4/index.scss
+++ b/index/Neural__4/index.scss
@@ -1,6 +1,6 @@
 $comfortaa: 'Comfortaa', cursive;
-$torea__bay: #0e2198;
-$jaffa: #f5774d; 
+$torea__bay: #5c0ab9;
+$jaffa: #76f06f; 
 
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
 
