--- a/index/Neural__5/index.scss
+++ b/index/Neural__5/index.scss
@@ -1,6 +1,6 @@
 $comfortaa: 'Comfortaa', cursive;
-$paua: #2b0066;
-$amaranth: #ec3c48; 
+$paua: #363a71;
+$amaranth: #77f283; 
 
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
 
