--- a/index/Neural__5/index.css
+++ b/index/Neural__5/index.css
@@ -6,8 +6,8 @@
 }
 
 body {
-  color: #ec3c48;
-  background: #2b0066;
+  color: #77f283;
+  background: #363a71;
   padding-left: 25%;
   padding-right: 25%;
 }
